--- a/src/styles/sidenavbar/_sidenavbar.scss
+++ b/src/styles/sidenavbar/_sidenavbar.scss
@@ -1,6 +1,7 @@
 .sidenav {
   background-image: linear-gradient(0deg, rgb(0, 195, 255), rgb(0, 255, 157));
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   padding: 20px;
 
   li {
