--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,6 @@
 @import './constants/constants';
 
 @import './sidenavbar/sidenavbar';
-@import './form/form'
+@import './form/form';
+
+@import './details/details'
