Added props to the AuthRoute component

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,7 @@
 @import './constants/constants';
 
+@import './home/home';
 @import './sidenavbar/sidenavbar';
 @import './form/form';
-
-@import './details/details'
+@import './details/details';
+@import './card/card'
