--- a/src/styles/sidenavbar/_sidenavbar.scss
+++ b/src/styles/sidenavbar/_sidenavbar.scss
@@ -1,5 +1,5 @@
 .sidenav {
-  background-image: linear-gradient(0deg, rgb(0, 195, 255), rgb(0, 255, 157));
+  background-image: linear-gradient(180deg, rgb(20, 160, 78), rgb(112, 218, 109));
   height: 100%;
   min-height: 100vh;
   padding: 20px;
@@ -9,8 +9,10 @@
     margin: 10px 0;
   }
 
-  a {
-    color: black;
+  a, li {
+    font-size: 20px;
+    font-weight: 600;
+    color: rgb(255, 255, 255);
     text-decoration: none;
   }
 
