added landing page

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,4 +4,5 @@
 @import './sidenavbar/sidenavbar';
 @import './form/form';
 @import './details/details';
-@import './card/card'
+@import './card/card';
+@import './landingpage/landingpage';
