--- a/src/styles/landingpage/_landingpage.scss
+++ b/src/styles/landingpage/_landingpage.scss
@@ -46,15 +46,25 @@
   display: flex;
 
   .box {
+    display: flex;
     align-self: center;
+    justify-content: center;
 
     .title {
+      max-width: 600px;
       align-self: center;
     }
 
     img {
-      height: 400px;
+      display: flex;
+      margin: 0 auto;
+      max-height: 400px;
       align-self: center;
+    }
+
+    p {
+      max-width: 400px;
+      margin: 10px auto;
     }
 
     a {
@@ -74,7 +84,7 @@
 }
 
 .comments {
-  padding: 80px 0;
+  padding: 40px 0;
   background-color: rgb(236, 236, 236);
   min-height: 380px;
   display: flex;
@@ -89,7 +99,7 @@
   }
 
   i {
-    margin: 0 auto 20px auto;
+    margin: 40px auto 20px auto;
     font-size: 30px;
     border: 1px solid black;
     border-radius: 40px;
@@ -121,14 +131,15 @@
   
     p {
       font-weight: 700;
-      width: 600px;
+      max-width: 600px;
       margin: 0 auto;
+      padding: 0 20px
     }
   
-    img { 
+    img {
       display: flex;
       align-self: center;    
-      margin: 0 auto;
+      margin: 20px auto;
       height: 300px;
     }
   }
