--- a/src/styles/landingpage/_landingpage.scss
+++ b/src/styles/landingpage/_landingpage.scss
@@ -83,8 +83,9 @@
 }
 
 .comments {
+  color: white;
   padding: 40px 0;
-  background-color: rgb(236, 236, 236);
+  background-image: linear-gradient(90deg, green, rgb(71, 240, 71));
   min-height: 380px;
   display: flex;
 
@@ -100,8 +101,8 @@
   i {
     margin: 40px auto 20px auto;
     font-size: 30px;
-    border: 1px solid black;
-    border-radius: 40px;
+    border: 3px solid white;
+    border-radius: 45px;
     padding: 40px;
     height: 25px;
     width: 25px;
@@ -147,7 +148,7 @@
 
 .contact {
   min-height: 600px;
-  background-image: linear-gradient(45deg, rgb(253, 152, 0), rgb(240, 187, 88));
+  background-image: linear-gradient(90deg, green, rgb(71, 240, 71));
 
   form {
     width: 500px;
