--- a/src/styles/card/_card.scss
+++ b/src/styles/card/_card.scss
@@ -1,5 +1,7 @@
 .meetingCard {
-  
+  display: flex;
+  margin: 0 auto;
+
   div:hover {
     box-shadow: 0px 2px 10px lightgrey;
   }
@@ -8,4 +10,8 @@
     box-shadow: none;
   }
 
+}
+
+.card {
+  position: static;
 }
