--- a/src/styles/sidenavbar/_sidenavbar.scss
+++ b/src/styles/sidenavbar/_sidenavbar.scss
@@ -1,10 +1,23 @@
+$navcolor:linear-gradient(180deg, rgb(20, 160, 78), rgb(112, 218, 109));
+
 .sidenav {
-  background-image: linear-gradient(180deg, rgb(20, 160, 78), rgb(112, 218, 109));
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: -100;
+  transition: 850ms;
+  background-image: $navcolor;
   height: 100%;
   min-height: 100vh;
-  padding: 20px;
+  width: 300px;
+
+  ul {
+    margin: 0;
+    padding-left: 10px;
+  }
 
   li {
+    padding-left: 10px;
     list-style: none;
     margin: 10px 0;
   }
@@ -19,4 +32,24 @@
   i {
     margin-right: 5px;
   }
+}
+
+.listBtn {
+  font-size: 25px;
+  color: white;
+  background-image: $navcolor;
+
+  i {
+    cursor: pointer;
+    padding-left: 10px;
+  }
+}
+
+.burgerIcon {
+  padding-top: 10px;
+  display: flex;
+  justify-content: end;
+  color: white;
+  cursor: pointer;
+  font-size: 25px;
 }
