--- a/src/styles/landingpage/_landingpage.scss
+++ b/src/styles/landingpage/_landingpage.scss
@@ -1,17 +1,18 @@
 .landingNav {
   display: flex;
-  margin: 40px;
-  position: fixed;
-  right: 0;
-
+  background-color: rgba(30, 218, 24, 0.959)!important;
+  
   li {
     list-style: none;
+    // color: white;
   }
-
+  
   a {
+    color: white!important;
     text-decoration: none;
     font-weight: bold;
-    color: black;
+    // color: white;
+    // color: black;
     text-decoration: none;
     letter-spacing: 0.15em;
     margin: 10px;
@@ -28,7 +29,7 @@
     height: 2px;
     left: 50%;
     position: absolute;
-    background: black;
+    background: white;
     transition: width 0.3s ease 0s, left 0.3s ease 0s;
     width: 0;
   }
@@ -50,8 +51,8 @@
     justify-content: center;
 
     .title {
-      max-width: 600px;
-      align-self: center;
+      max-width: 400px;
+      margin: 120px auto 0 auto;
     }
 
     img {
@@ -147,6 +148,7 @@
 }
 
 .contact {
+  color: white;
   min-height: 600px;
   background-image: linear-gradient(90deg, green, rgb(71, 240, 71));
 
