navbar displayed on the right

--- a/src/styles/landingpage/_landingpage.scss
+++ b/src/styles/landingpage/_landingpage.scss
@@ -1,6 +1,6 @@
 .landingNav {
   display: flex;
-  background-color: rgba(30, 218, 24, 0.959)!important;
+  background-color: rgba(30, 218, 24, 0.7);
   
   li {
     list-style: none;
