edited the navbar

--- a/src/styles/sidenavbar/_sidenavbar.scss
+++ b/src/styles/sidenavbar/_sidenavbar.scss
@@ -4,7 +4,7 @@ $navcolor:linear-gradient(180deg, rgb(20, 160, 78), rgb(112, 218, 109));
   display: flex;
   position: fixed;
   top: 0;
-  right: 0;
+  // right: 0;
   transition: 850ms;
   background-image: $navcolor;
   height: 100%;
@@ -36,7 +36,7 @@ $navcolor:linear-gradient(180deg, rgb(20, 160, 78), rgb(112, 218, 109));
 
 .listBtn {
   display: flex;
-  justify-content: end;
+  // justify-content: end;
   color: white;
   background-image: $navcolor;
 
@@ -51,7 +51,6 @@ $navcolor:linear-gradient(180deg, rgb(20, 160, 78), rgb(112, 218, 109));
   padding-top: 10px;
   display: flex;
   // right: 0;
-  // justify-content: end;
   color: white;
   cursor: pointer;
   font-size: 35px;
